--- a/trunk/keyclick/form-act-singly.phtml
+++ b/trunk/keyclick/form-act-singly.phtml
@@ -118,7 +118,7 @@ require_once("f_stateselectionlist.phtml");
                     $result = $db_link->query
                        (
                        "update " . $mode . "resident_base "
-                       .  "set name='" . addslashes(strtoupper(trim($name))) . "' "
+                       .  "set name=NULLIF('" . addslashes(strtoupper(trim($name))) . "','') "
                        .  "   , house_num='" . addslashes($house_num) . "' "
                        .  "   , street_id='" . addslashes($street_id) . "' "
                        .  "where id=$id_to_save "
