Revised to present empty street option at top of dropdownlist to prevent inadvertent addition of resident_base records to the first true street that was otherwise coming up.

--- a/f_streetselectionlist.phtml
+++ b/f_streetselectionlist.phtml
@@ -26,6 +26,10 @@ function StreetSelectionList
       {
       echo "<select name=street_id>\n";
       //
+      if ($selected_option == "")
+        {
+        echo "   <option value=\"\">-- Select --</option>\n";
+        }
       while($row = mysqli_fetch_array($result))
          {
          $id = $spec = "";
