--- a/form-add-donation.phtml
+++ b/form-add-donation.phtml
@@ -22,8 +22,10 @@ $mode = "";
 // Assign incoming arguments to themselves to prevent 'uninitialized variable' warnings later.
 //
 $bpn = $bpn;
-$be_rescuer_prospect = $be_rescuer_prospect;
-$be_support_prospect = $be_support_prospect;
+$be_interested_in_patient_care = $be_interested_in_patient_care;
+$be_interested_in_support = $be_interested_in_support;
+$be_interested_in_volunteering = $be_interested_in_volunteering;
+$be_interested_in_bequesting = $be_interested_in_bequesting;
 $method = $method;
 $in_mem_of = $in_mem_of;
 $note = $note;
@@ -44,7 +46,6 @@ require_once("f_bevalidboardingpass.phtml");
 require_once("f_kickoff.phtml");
 require_once("f_formattednoteappendage.phtml");
 require_once("f_emailaddrofbpn.phtml");
-require_once("f_prospectivityselectionlist.phtml");
 require_once("f_methodselectionlist.phtml");
 ?>
 <html>
@@ -150,7 +151,10 @@ else
                        .  "set id=$id "
                        .  "   , amount=$amount "
                        .  "   , date=CURRENT_DATE "
-                       .  "   , prospectivity='$prospectivity' "
+                       .  "   , be_interested_in_patient_care=" . ($be_interested_in_patient_care ? "TRUE" : "FALSE")
+                       .  "   , be_interested_in_support=" . ($be_interested_in_support ? "TRUE" : "FALSE")
+                       .  "   , be_interested_in_volunteering=" . ($be_interested_in_volunteering ? "TRUE" : "FALSE")
+                       .  "   , be_interested_in_bequesting=" . ($be_interested_in_bequesting ? "TRUE" : "FALSE")
                        .  "   , method='$method' "
                        .  "   , in_mem_of='" . addslashes(trim($in_mem_of)) . "' "
                        .  "   , note='" . addslashes(trim($note)) . "' "
@@ -158,7 +162,7 @@ else
                        .  "   , per_clerk_seq_num=$per_clerk_seq_num "
                        )
                        or die("Insert failed with error: " . mysqli_error($db_link) . ".  qry=[$qry]");
-                    $db_link->query($qry = "update resident_base set year_of_last_appeal_to_become_a_donor = null where id = '$id'")
+                   $db_link->query($qry = "update resident_base set year_of_last_appeal_to_become_a_donor = null where id = '$id'")
                        or die("Update failed with error: " . mysqli_error($db_link) . ".  qry=[$qry]");
                     $db_link->query($qry = "delete from web_donor where resident_id = '$id'")
                        or die("Replacement of old email address failed with error: " . mysqli_error($db_link) . ".  qry=[$qry]");
@@ -206,7 +210,10 @@ else
                           . "on record\n";
                        }
                     echo "<dt>Amount:</dt><dd>\$$amount</dd>\n"
-                       . "<dt>Prospectivity:</dt><dd>$prospectivity&nbsp;</dd>\n"
+                       . "<dt>Interested in patient care:</dt><dd>" . ($be_interested_in_patient_care ? "YES" : "no") . "&nbsp;</dd>\n"
+                       . "<dt>Interested in support:</dt><dd>" . ($be_interested_in_support ? "YES" : "no") . "&nbsp;</dd>\n"
+                       . "<dt>Interested in volunteering:</dt><dd>" . ($be_interested_in_volunteering ? "YES" : "no") . "&nbsp;</dd>\n"
+                       . "<dt>Interested in bequesting:</dt><dd>" . ($be_interested_in_bequesting ? "YES" : "no") . "&nbsp;</dd>\n"
                        . "<dt>Method:</dt><dd>$method</dd>\n"
                        . "<dt>In memory of:</dt><dd>$in_mem_of&nbsp;</dd>\n"
                        . "<dt>Note:</dt><dd>$note&nbsp;</dd>\n"
@@ -229,8 +236,8 @@ else
               //
               echo "</small>\n";
               //
-              $id = $name = $address1 = $city = $state = $amount = $prospectivity = $method = $in_mem_of =
-                 $note = $email_address = "";
+              $id = $name = $address1 = $city = $state = $amount = $be_interested_in_patient_care = $be_interested_in_support = $be_interested_in_volunteering =
+                 $be_interested_in_bequesting = $method = $in_mem_of = $note = $email_address = "";
               //
               }
            elseif ($undo)
@@ -267,9 +274,10 @@ else
                  . "         </td>\n"
                  . "      </tr>\n"
                  . "      <tr><td align=right>Amount: $</td><td colspan=2><input type=text name=amount size=6 maxlength=10 tabindex=2></td></tr>\n"
-                 . "      <tr><td align=right>Wants info on:</td><td colspan=2>\n";
-              echo ProspectivitySelectionList($db_link,$agency,$mode);
-              echo "      </td></tr>\n"
+                 . "      <tr><td align=right>Interested in patient care:</td><td colspan=2><input type=checkbox name=be_interested_in_patient_care></td></tr>\n"
+                 . "      <tr><td align=right>Interested in support:</td><td colspan=2><input type=checkbox name=be_interested_in_support></td></tr>\n"
+                 . "      <tr><td align=right>Interested in volunteering:</td><td colspan=2><input type=checkbox name=be_interested_in_volunteering></td></tr>\n"
+                 . "      <tr><td align=right>Interested in bequesting:</td><td colspan=2><input type=checkbox name=be_interested_in_bequesting></td></tr>\n"
                  . "      <tr><td align=right>Received via:</td><td colspan=2>\n";
               echo MethodSelectionList($db_link,$agency,$mode);
               echo "      </td></tr>\n"
