--- a/trunk/keyclick/form-add-donation-old.phtml
+++ b/trunk/keyclick/form-add-donation-old.phtml
@@ -22,8 +22,10 @@ $mode = "";
 // Assign incoming arguments to themselves to prevent 'uninitialized variable' warnings later.
 //
 $bpn = $bpn;
-$be_rescuer_prospect = $be_rescuer_prospect;
-$be_support_prospect = $be_support_prospect;
+$be_interested_in_patient_care = $be_interested_in_patient_care;
+$be_interested_in_support = $be_interested_in_support;
+$be_interested_in_volunteering = $be_interested_in_volunteering;
+$be_interested_in_bequesting = $be_interested_in_bequesting;
 $method = $method;
 $in_mem_of = $in_mem_of;
 $note = $note;
@@ -46,7 +48,6 @@ require_once("f_bevalidboardingpass.phtml");
 require_once("f_kickoff.phtml");
 require_once("f_formattednoteappendage.phtml");
 require_once("f_emailaddrofbpn.phtml");
-require_once("f_prospectivityselectionlist.phtml");
 require_once("f_methodselectionlist.phtml");
 ?>
 <html>
@@ -233,7 +234,10 @@ else
                                 .  "set id=$id "
                                 .  "   , date='$year_num-$month_num-$day_num' "
                                 .  "   , amount=$amount "
-                                .  "   , prospectivity='$prospectivity' "
+                                .  "   , be_interested_in_patient_care=" . ($be_interested_in_patient_care ? "TRUE" : "FALSE")
+                                .  "   , be_interested_in_support=" . ($be_interested_in_support ? "TRUE" : "FALSE")
+                                .  "   , be_interested_in_volunteering=" . ($be_interested_in_volunteering ? "TRUE" : "FALSE")
+                                .  "   , be_interested_in_bequesting=" . ($be_interested_in_bequesting ? "TRUE" : "FALSE")
                                 .  "   , method='$method' "
                                 .  "   , in_mem_of='" . addslashes(trim($in_mem_of)) . "' "
                                 .  "   , note='" . addslashes(trim($note)) . "' "
@@ -272,7 +276,10 @@ else
                                 }
                              echo "<dt>Date:</dt><dd>$year_num-$month_num-$day_num</dd>\n"
                                 . "<dt>Amount:</dt><dd>\$$amount</dd>\n"
-                                . "<dt>Prospectivity:</dt><dd>$prospectivity&nbsp;</dd>\n"
+                                . "<dt>Interested in patient care:</dt><dd>" . ($be_interested_in_patient_care ? "YES" : "no") . "&nbsp;</dd>\n"
+                                . "<dt>Interested in support:</dt><dd>" . ($be_interested_in_support ? "YES" : "no") . "&nbsp;</dd>\n"
+                                . "<dt>Interested in volunteering:</dt><dd>" . ($be_interested_in_volunteering ? "YES" : "no") . "&nbsp;</dd>\n"
+                                . "<dt>Interested in bequesting:</dt><dd>" . ($be_interested_in_bequesting ? "YES" : "no") . "&nbsp;</dd>\n"
                                 . "<dt>Method:</dt><dd>$method</dd>\n"
                                 . "<dt>In memory of:</dt><dd>$in_mem_of&nbsp;</dd>\n"
                                 . "<dt>Note:</dt><dd>$note&nbsp;</dd>\n"
@@ -342,8 +349,8 @@ else
               if (!$possible_preemptive_op)
                  {
                  //
-                 $id = $name = $address1 = $city = $state = $zip = $amount = $prospectivity = $method = $in_mem_of =
-                    $note = $email_address = "";
+                 $id = $name = $address1 = $city = $state = $zip = $amount = $be_interested_in_patient_care = $be_interested_in_support = $be_interested_in_volunteering =
+                    $be_interested_in_bequesting = $method = $in_mem_of = $note = $email_address = "";
                  //
                  // On first time in, must set $year_num to something, else it's possible to insert date 0000-00-00.
                  //
@@ -401,9 +408,10 @@ else
                        . "      </tr>\n"
                        . "      <tr><td align=right>ROD #:</td><td colspan=2><input type=text name=id size=6 maxlength=6 value=$cross_id></td></tr>\n"
                        . "      <tr><td align=right>Amount: $</td><td colspan=2><input type=text name=amount size=6 maxlength=10></td></tr>\n"
-                       . "      <tr><td align=right>Wants info on:</td><td colspan=2>\n";
-                    echo ProspectivitySelectionList($db_link,$agency,$mode);
-                    echo "      </td></tr>\n"
+                       . "      <tr><td align=right>Interested in patient care: </td><td colspan=2><input type=checkbox name=be_interested_in_patient_care></td></tr>\n"
+                       . "      <tr><td align=right>Interested in support: </td><td colspan=2><input type=checkbox name=be_interested_in_support></td></tr>\n"
+                       . "      <tr><td align=right>Interested in volunteering: </td><td colspan=2><input type=checkbox name=be_interested_in_volunteering></td></tr>\n"
+                       . "      <tr><td align=right>Interested in bequesting: </td><td colspan=2><input type=checkbox name=be_interested_in_bequesting></td></tr>\n"
                        . "      <tr><td align=right>Received via:</td><td colspan=2>\n";
                     echo MethodSelectionList($db_link,$agency,$mode);
                     echo "      </td></tr>\n"
@@ -449,7 +457,10 @@ else
                     . "      <input type=hidden name=day_num value=$day_num>\n"
                     . "      <input type=hidden name=id value=$id>\n"
                     . "      <input type=hidden name=amount value=$amount>\n"
-                    . "      <input type=hidden name=prospectivity value=$prospectivity>\n"
+                    . "      <input type=hidden name=be_interested_in_patient_care value=$be_interested_in_patient_care>\n"
+                    . "      <input type=hidden name=be_interested_in_support value=$be_interested_in_support>\n"
+                    . "      <input type=hidden name=be_interested_in_volunteering value=$be_interested_in_volunteering>\n"
+                    . "      <input type=hidden name=be_interested_in_bequesting value=$be_interested_in_bequesting>\n"
                     . "      <input type=hidden name=method value=$method>\n"
                     . "      <input type=hidden name=in_mem_of value=$in_mem_of>\n"
                     . "      <input type=hidden name=note value=$note>\n"
