--- a/f_zipdump.phtml
+++ b/f_zipdump.phtml
@@ -2,7 +2,7 @@
 //
 // $Id$
 //
-function ZipDump($sql_query,$filename)
+function ZipDump($db_link,$sql_query,$filename)
 {
 /**
  *
@@ -67,7 +67,7 @@ require('./libraries/zip.lib.php3');
 
    $tmp_buffer = '';
 //   PMA_getTableCsv($db, $table, $limit_from, $limit_to, $separator, $enclosed, $escaped, 'PMA_myCsvHandler', $err_url);
-   PMA_getTableCsv(stripslashes($sql_query), 'PMA_myCsvHandler', $err_url, &$add_character, &$tmp_buffer);
+   PMA_getTableCsv($db_link,stripslashes($sql_query), 'PMA_myCsvHandler', $err_url, &$add_character, &$tmp_buffer);
    $dump_buffer .= $tmp_buffer;
 
    /**
